feedback thing ready
